# rapidchecker

./: .gitignore  README.md  pyproject.toml  rapidchecker.template.toml  ruff.toml
.github/workflows/: publish.yml  pytest.yml  python-checks.yml  ruff.yml
rapidchecker/: check.py  cli.py  config.py  io.py  whitespace_checks.py
rapidchecker/parser/: grammar.py  indent.py  tokens.py
tests/: test_grammar.py  test_identifiers.py  test_tokens.py  test_whitespace_checks.py
tests/rapid_samples/: BadWhitespaceModule.sys  SimpleModule.sys
